<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthTipActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/note_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_one"/>

        <TextView
            android:id="@+id/note_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_one"
            android:text="@string/note_two"/>

        <TextView
            android:id="@+id/note_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_three"
            android:layout_below="@id/note_two"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/note_three_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_three"
            android:text="@string/heart_rate_training_zones"/>

        <TableLayout
            android:id="@+id/heart_rate_training_zone_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_three_sub">
            <TableRow
                android:id="@+id/heading_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/heart_rate_label"
                    android:textStyle="bold"/>
                <TextView
                    android:text="@string/effort"
                    android:textStyle="bold"/>
                <TextView
                    android:text="@string/effect"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:id="@+id/zone_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/zone_five"/>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/very_hard"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_five_effort"/>
                    </TableRow>
                </TableLayout>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_five_effect"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_five_effect_sub"
                            />
                    </TableRow>
                </TableLayout>


            </TableRow>

            <TableRow
                android:id="@+id/zone_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/zone_four"/>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/hard"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_four_effort"/>
                    </TableRow>
                </TableLayout>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_four_effect"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_four_effect_sub"
                            />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:id="@+id/zone_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/zone_three"/>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/moderate"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_three_effort"/>
                    </TableRow>
                </TableLayout>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_three_effect"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_three_effect_sub"
                            />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:id="@+id/zone_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/zone_two"/>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/light"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_two_effort"/>
                    </TableRow>
                </TableLayout>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_two_effect"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_two_effect_sub"
                            />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:id="@+id/zone_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/zone_one"/>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/very_light"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_one_effort"/>
                    </TableRow>
                </TableLayout>
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_one_effect"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/zone_one_effect_sub"
                            />
                    </TableRow>
                </TableLayout>


            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/how_to_check_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heart_rate_training_zone_table"
            android:text="@string/how_to_check_heart_rate"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/how_to_check_heart_rate_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/how_to_check_heart_rate"
            android:text="@string/how_to_check_heart_rate_detail"/>



    </RelativeLayout>

</ScrollView>