<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeartRatesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_first_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_last_name"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/date_of_birth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:id="@+id/set_date_of_birth"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/date_of_birth_not_set"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>

        <Button
            android:id="@+id/show_heart_rate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_heart_rate"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_disclaimer_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/disclaimer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/disclaimer_detail_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/disclaimer_detail"
            android:textAppearance="?android:textAppearance"
            android:layout_margin="8dp"
            android:lines="3"
            android:maxLines="3"/>

    </LinearLayout>

</RelativeLayout>